[gd_scene load_steps=3 format=3 uid="uid://c4d08xscglppy"]

[ext_resource type="Script" path="res://scences/room_templates/RoomSpawner.gd" id="1_ox4dy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2lk0w"]
radius = 80.399

[node name="RoomSpawner" type="Area2D" groups=["room_spawner"]]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_ox4dy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2lk0w")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
